Finished theory about the dynamo theory

--- a/compessay.ipynb
+++ b/compessay.ipynb
@@ -17,9 +17,13 @@
    "source": [
     "## Theory\n",
     "\n",
-    "Over the years, many theories have been proposed to explain how earth magnetic field is formed. The oldest theory is about earth itself being a gigantic magnet, and that the earth as a magnet has remained alive well into modern times. This theory however has to be discarded, the reason for why it has been discarded is because of how the earth is builed. #skrive mer her\n",
+    "Over the years, many theories have been proposed to explain how Earth magnetic field is formed. The oldest theory is about Earth itself being a gigantic magnet, and that the Earth as a magnet has remained alive well into modern times. This theory however has to be discarded, the reason for why it has been discarded is because of how the earth is builed up. Our planet, the Earth, is made up by three main layers; the crust, the mantle and the core. By our knowledge, Earth temperature increases with depth. It has to be said that the rate of increase is not linear. The temperature of the base of the crust is around 1000°C, and the temperature of inner core is estimated to be around 6000°C. Because of Earth temperature, any known material with a permantet magnetic field, would have lost its magnetism.\n",
     "\n",
-    "Dynamo theory, is a theory that explains why earth has a magnetic field, and how it is maintained. It "
+    "The theory that most likely is the reason for why Earth has a magnetic field, and how the magnetic field is maintained, is called the Dynamo theory. This theory is made up of several different natural phenomena and physical laws.\n",
+    "\n",
+    "Earth's core, as mentioned earlier, is one of three layers that the earth is made up of. If we look closer at the earth's core, we can see that the core is also made up of different layer, or rather 2 layers. We have the solid inner core, and outer core which is a fluid. We are not completely sure, but research suggests that the Earth's outer core is made up of a mass that has electrically conductive abilities. \n",
+    "\n",
+    "It is thought that a dynamo process takes place in the Earth's core, simply explained that the mass of the Earth's outer core floats and flows in a source field, by flowing in a source field an electric current is generated. This electric current helps to maintain the earth's magnetic field. The magnetic field interacts with the mass current, which causes the current in the Earth's outer core to further strengthen the magnetic field. If we add all these mass currents affecting the magnetic field, it looks like solenoids are formed. A solenoid is a type of electromagnet, which is made up of a helix consisting of electrically conductive material, where the length of the solenoid is longer than the diameter."
    ]
   },
   {
